<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/historical"
            android:icon="@drawable/ic_historical"
            android:title="@string/historical_sites" />

        <item
            android:id="@+id/museum"
            android:icon="@drawable/ic_museum"
            android:title="@string/museums" />

        <item
            android:id="@+id/hotel"
            android:icon="@drawable/ic_hotel"
            android:title="@string/hotels" />

        <item
            android:id="@+id/restaurant"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/restaurant" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>
</menu>